<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find My Classmates"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />


    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewTitle"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/buttonDepartments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Classes"
        android:layout_below="@id/buttonProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/buttonMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Registered Classes"
        android:layout_below="@id/buttonDepartments"
        android:layout_centerHorizontal="true" />

</RelativeLayout>