<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_registered_classes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registered Classes"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="16dp"
        android:background="#EFEFEF" />

    <ListView
        android:id="@+id/lv_registered_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_registered_classes_title"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp" />
</RelativeLayout>
