<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:text="User ID"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/buttonBlock"
        android:layout_centerVertical="true"
        android:text="Profile"/>



    <Button
        android:id="@+id/buttonBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/buttonMessage"
        android:layout_centerVertical="true"
        android:text="Block"/>

    <Button

        android:id="@+id/buttonMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:text="Message"/>

</RelativeLayout>
